// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Snackbar Should match snapshot correctly. 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#2e2f32",
        "borderRadius": 4,
        "flexDirection": "row",
        "margin": 16,
      },
      undefined,
    ]
  }
  testID="Snackbar"
>
  <Text
    accessibilityRole="alert"
    style={
      [
        {
          "color": "#2e2f32",
          "fontFamily": "Bogle",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#fff",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 20,
          "padding": 16,
        },
      ]
    }
    testID="Body"
  >
    Test
  </Text>
</View>
`;

exports[`Test Snackbar Should match snapshot of closeButton correctly. 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#2e2f32",
        "borderRadius": 4,
        "flexDirection": "row",
        "margin": 16,
      },
      undefined,
    ]
  }
  testID="Snackbar"
>
  <Text
    accessibilityRole="alert"
    style={
      [
        {
          "color": "#2e2f32",
          "fontFamily": "Bogle",
          "fontSize": 16,
          "fontStyle": "normal",
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "#fff",
          "flex": 1,
          "fontSize": 14,
          "lineHeight": 20,
          "padding": 16,
        },
      ]
    }
    testID="Body"
  >
    Test
  </Text>
  <View
    style={
      {
        "paddingRight": 4,
        "paddingTop": 12,
      }
    }
  >
    <View
      accessibilityLabel="Close"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      color="#fff"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderRadius": 1000,
            "height": 32,
            "justifyContent": "center",
            "width": 32,
          },
          {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
        ]
      }
      testID="IconButton"
    >
      <Image
        accessibilityRole="image"
        source={
          {
            "testUri": "../../@walmart/gtp-shared-icons/assets/images/icons/Close-16.png",
          }
        }
        style={
          [
            {
              "height": 16,
              "tintColor": "#fff",
              "width": 16,
            },
            {},
          ]
        }
        testID="CloseIcon"
      />
    </View>
  </View>
</View>
`;
